COMMS
You have 9 outdated formulae installed.

Warning: No available formula with the name "smckit".
==> Searching for similarly named formulae and 
==> Casks
skint
=============================================================
koryinks@KMBP MacFanControl % which smc
smc not found
koryinks@KMBP MacFanControl % which smckit
smckit not found
koryinks@KMBP MacFanControl % system_profiler SPHardwareDataType
Hardware:

    Hardware Overview:

      Model Name: MacBook Pro
      Model Identifier: MacBookPro11,5
      Processor Name: Quad-Core Intel Core i7
      Processor Speed: 2.8 GHz
      Number of Processors: 1
      Total Number of Cores: 4
      L2 Cache (per Core): 256 KB
      L3 Cache: 6 MB
      Hyper-Threading Technology: Enabled
      Memory: 16 GB
      System Firmware Version: 489.0.0.0.0
      OS Loader Version: 540.120.3~37
      SMC Version (system): 2.30f2
      Serial Number (system): C02RV1AVG8WM
      Hardware UUID: 253EBD73-7672-5497-ABA9-D181B6F7FF62
      Provisioning UDID: 253EBD73-7672-5497-ABA9-D181B6F7FF62

koryinks@KMBP MacFanControl % brew search smc
==> Formulae
chrome-devtools-mcp     swc
kubernetes-mcp-server   src
osmcoastline            sic
prism-cli               shc
rails-mcp-server        sec
wasm-component-ld       scc
smu

==> Casks
jmc (disabled)          smcfancontrol
osmc (deprecated)       smcfancontrol@beta

koryinks@KMBP MacFanControl % brew search fan
==> Formulae
diff-so-fancy
fancy-cat
fann
fantom
fanyi
grafana
grafana-agent (disabled)
grafana-alloy
grafanactl
mcp-grafana
profanity
vcfanno
pan
xan

==> Casks
fanny
fantastical
fantasy-grounds (disabled)
final-fantasy-xiv-online
fman
font-cormorant-infant
font-dawning-of-a-new-day
font-fandol
font-fantasque-sans-mono
font-fantasque-sans-mono-nerd-font
font-fantasque-sans-mono-noloopk
font-fanwood-text
font-fzfangsong-z02 (disabled)
font-ysabeau-infant
font-zhuque-fangsong
jan
macs-fan-control
smcfancontrol
smcfancontrol@beta

==============================================================
koryinks@KMBP MacFanControl % xcode-select -p
/Library/Developer/CommandLineTools
koryinks@KMBP MacFanControl % brew info smcfancontrol
==> smcfancontrol ✘ (smcFanControl): 2.6
Sets a minimum speed for built-in fans
https://github.com/hholtmann/smcFanControl
Not installed
From: https://github.com/Homebrew/homebrew-cask/blob/HEAD/Casks/s/smcfancontrol.rb
==> Requirements
Required: macOS ✔
==> Artifacts
smcFanControl.app (App)
==> Downloading https://formulae.brew.sh/api/ca
==> Analytics
install: 322 (30 days), 1,028 (90 days), 3,359 (365 days)

===============================================================
koryinks@KMBP native % make check
Checking build environment...
  clang: OK
  IOKit: OK
  smc.c: OK
  smc.h: OK
koryinks@KMBP native % make
clang -DCMD_TOOL_BUILD -Wall -O2 -framework IOKit -framework CoreFoundation -o macfan_smc macfan_smc.c
macfan_smc.c:26:9: warning: 'CMD_TOOL_BUILD' macro redefined [-Wmacro-redefined]
#define CMD_TOOL_BUILD
        ^
<command line>:1:9: note: previous definition is here
#define CMD_TOOL_BUILD 1
        ^
macfan_smc.c:50:5: error: use of undeclared identifier 'kern_return_t'
    kern_return_t result;
    ^
macfan_smc.c:51:5: error: use of undeclared identifier 'SMCKeyData_t'
    SMCKeyData_t  inputStructure;
    ^
macfan_smc.c:52:5: error: use of undeclared identifier 'SMCKeyData_t'
    SMCKeyData_t  outputStructure;
    ^
macfan_smc.c:54:5: error: use of undeclared identifier 'UInt32Char_t'
    UInt32Char_t  key;
    ^
macfan_smc.c:55:5: error: use of undeclared identifier 'SMCVal_t'
    SMCVal_t      val;
    ^
macfan_smc.c:57:17: error: implicit declaration of function 'SMCReadIndexCount' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
    totalKeys = SMCReadIndexCount();
                ^
macfan_smc.c:61:44: error: use of undeclared identifier 'SMCKeyData_t'
        memset(&inputStructure,  0, sizeof(SMCKeyData_t));
                                           ^
macfan_smc.c:61:17: error: use of undeclared identifier 'inputStructure'
        memset(&inputStructure,  0, sizeof(SMCKeyData_t));
                ^
macfan_smc.c:61:17: error: use of undeclared identifier 'inputStructure'
macfan_smc.c:62:44: error: use of undeclared identifier 'SMCKeyData_t'
        memset(&outputStructure, 0, sizeof(SMCKeyData_t));
                                           ^
macfan_smc.c:62:17: error: use of undeclared identifier 'outputStructure'
        memset(&outputStructure, 0, sizeof(SMCKeyData_t));
                ^
macfan_smc.c:62:17: error: use of undeclared identifier 'outputStructure'
macfan_smc.c:63:44: error: use of undeclared identifier 'SMCVal_t'
        memset(&val,             0, sizeof(SMCVal_t));
                                           ^
macfan_smc.c:63:17: error: use of undeclared identifier 'val'
        memset(&val,             0, sizeof(SMCVal_t));
                ^
macfan_smc.c:63:17: error: use of undeclared identifier 'val'
macfan_smc.c:65:9: error: use of undeclared identifier 'inputStructure'
        inputStructure.data8  = SMC_CMD_READ_INDEX;
        ^
macfan_smc.c:65:33: error: use of undeclared identifier 'SMC_CMD_READ_INDEX'
        inputStructure.data8  = SMC_CMD_READ_INDEX;
                                ^
macfan_smc.c:66:9: error: use of undeclared identifier 'inputStructure'
        inputStructure.data32 = i;
        ^
macfan_smc.c:68:9: error: use of undeclared identifier 'result'
        result = SMCCall(KERNEL_INDEX_SMC, &inputStructure, &outputStructure);
        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
1 warning and 20 errors generated.
make: *** [macfan_smc] Error 1